# rounds

./: .claude_prompt_103d82e4-ae4d-491f-974b-843a46f42b86.txt  .claude_prompt_1d4e0dfd-7b91-4b95-9188-27d12d215a97.txt  .claude_prompt_4a0b2d0b-926b-432d-8dee-9a9126b1d03f.txt  .claude_prompt_501349ac-fc84-43d9-a700-d3f8b8c2d59b.txt  .claude_prompt_598116f2-4940-4b61-bb31-a643f51e30bd.txt  .claude_prompt_5a6b3fe0-7aed-4501-81eb-6253f01a6c69.txt  .claude_prompt_5f9a820f-f476-45f8-a153-a207c335fe22.txt  .claude_prompt_69f9832b-ba47-42fe-b1ad-5a02315dc538.txt  .claude_prompt_719ce6ba-36c6-45f3-907d-c3eb65c2a0d3.txt  .claude_prompt_ac133f74-7c9e-45ae-8b39-41a1020a21c7.txt  .claude_prompt_ae1bb213-a6b6-4b2e-a262-b5228cfbf915.txt  .claude_prompt_dd9a972a-637a-48c0-a662-1258d6f75be2.txt  .claude_prompt_ea7fcc1b-fec8-4e3f-856f-9b5f482f4449.txt  .dockerignore  .env.rounds.template  ANALYSIS_FILES_REFERENCE.md  ANALYSIS_INDEX.md  ANALYSIS_OVERVIEW.md  AUDIT_CHECKLIST.md  AUDIT_COMPLETE.txt  AUDIT_INDEX.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY.txt  CLAUDE.md  COVERAGE_GAPS_BY_FILE.md  CRITICAL_DEVIATIONS_WITH_FIXES.md  CRITICAL_FIXES_CODE_EXAMPLES.md  CRITICAL_ISSUES_SUMMARY.md  DEPLOY.md  Dockerfile.agent  Dockerfile.dev  Dockerfile.dist  ERROR_AUDIT_INDEX.md  ERROR_HANDLING_AUDIT.md  ERROR_HANDLING_AUDIT_GET_BY_ID.md  ERROR_HANDLING_AUDIT_REPORT.md  ERROR_HANDLING_FIXES.md  ERROR_HANDLING_FLOWCHART.txt  ERROR_HANDLING_QUICK_REFERENCE.txt  ERROR_HANDLING_SUMMARY.txt  (+34 more)
docs/: DOCKER.md  (+4 more)
rounds/: .env.example  PHASE_6_SUMMARY.md  __init__.py  config.py  main.py  pyproject.toml
rounds/adapters/: __init__.py
rounds/adapters/cli/: __init__.py  commands.py
rounds/adapters/diagnosis/: __init__.py  claude_code.py  openai.py
rounds/adapters/notification/: __init__.py  github_issues.py  markdown.py  stdout.py
rounds/adapters/scheduler/: __init__.py  daemon.py
rounds/adapters/store/: __init__.py  postgresql.py  sqlite.py
rounds/core/: __init__.py  fingerprint.py  investigator.py  management_service.py  models.py  poll_service.py  ports.py  triage.py
rounds/tests/: __init__.py  test_cli_commands.py  test_cli_interactive.py  test_composition_root.py  test_new_implementations.py  test_workflows.py
(+62 files in other folders)
